Completed the css and html code for the footer section of the webpage. Also corrected the header left and right side not being aligned with rest of webpage when fullscreened. I also reduced the bottom margin of the bottom section to be more even.

--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
 
 .header-container {
     display: flex;
-    justify-content: space-between;
-
+    justify-content: space-evenly;
+    gap: 450px;
 }
 
 .header-logo {
@@ -210,6 +210,7 @@ ul {
     background-color: #3882f6;
     padding: 32px;
     margin-top: 80px;
+    margin-bottom: 30px;
     width: 900px;
     border-radius: 25px;
     display: flex;
@@ -244,6 +245,18 @@ ul {
     border: 2px #fff solid;
 }
 
-
-
 /* Bottom section */
+
+
+/* Footer section */
+
+.footer {
+    background-color: #1f2937;
+    color: #e5e7eb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+/* Footer section */
